# pot-o-desktop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  commit_msg.txt  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml
src/: main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  keypair.rs  lib.rs  local_chain.rs  logger.rs  main.rs  mining.rs  rpc.rs  storage.rs  syncer.rs  wallet.rs  ws_client.rs
src/__tests__/: helpers.test.js  mining.test.js
