[package]
name = "pot-o-desktop"
version = "0.2.0"
edition = "2021"

[lib]
name = "pot_o_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
toml = "0.8"
sha2 = "0.10"
flate2 = "1"
hex = "0.4"
ed25519-dalek = "2"
rand = "0.8"
hexchain-p2p = { git = "https://github.com/TribeWarez/pot-o-validator", version = "0.7" }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
